--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.5.0
 Django==4.0.2
+django-crispy-forms==1.14.0
+django-debug-toolbar==3.2.4
+django-extensions==3.1.5
 flake8==4.0.1
 flake8-builtins==1.5.3
 flake8-print==4.0.0
@@ -9,3 +12,18 @@ pyflakes==2.4.0
 six==1.16.0
 sqlparse==0.4.2
 tzdata==2021.5
+flake8==4.0.1
+flake8-blind-except==0.2.1
+flake8-breakpoint==1.1.0
+flake8-bugbear==22.3.20
+flake8-builtins==1.5.3
+flake8-debugger==4.0.0
+flake8-eradicate==1.2.0
+flake8-import-order==0.18.1
+flake8-mutable==1.2.0
+flake8-plugin-utils==1.3.2
+flake8-polyfill==1.0.2
+flake8-print==4.0.0
+flake8-pytest-style==1.6.0
+flake8-use-fstring==1.3
+flake8-variables-names==0.0.5
